--- a/packages/tools/docusaurus/docs/guides/create/start.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/start.mdx
@@ -274,3 +274,9 @@ node_modules
 
 We'll continue by applying our branding to **kickstartDS**, which will result in a bunch of token files (`JSON`) being added to the project.<br/>
 This will also give us the opportunity to set up `Storybook`, and get a first visual representation of our Design System in the browser!
+
+TODO add Commit reminder
+
+## Code Sandbox
+
+TODO add Code Sandbox with result of step
