feat(docs): flesh out foundations for components a bit

--- a/packages/tools/docusaurus/docs/guides/create/components.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/components.mdx
@@ -12,6 +12,8 @@ Now we'll get to the meat of it... adding your first set of components. Which on
 - Component Workflow 2
 - Component Workflow 3
 
+TODO there needs to be some stuff about Providers and layered components here, and the general setup of adding a `Providers.jsx` for re-use.
+
 Feel free to change these examplary components being implemented around to something you'll actually need, if you happen to have something in mind already.<br/>
 We'll try adding some components that are commonly needed, so it should be a good starting point either way!
 
