--- a/packages/tools/docusaurus/docs/guides/create/design.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/design.mdx
@@ -20,7 +20,7 @@ Applying your branding and corporate design to **kickstartDS** is itself done in
 We start by creating a new file: `branding-token.json` at our project root:
 
 ```bash
-$ touch branding-token.json
+touch branding-token.json
 ```
 
 This will hold all of our `Branding Token`. Those are used to initialize you first Design Token set, and especially ease first-time setup.<br/>
@@ -820,7 +820,7 @@ Now that we have a slightly modified, up-to-date version of our Branding Token i
 First, add the `kickstartDS CLI` to your project:
 
 ```bash
-$ yarn add kickstartds
+yarn add kickstartds
 ```
 
 Read more about our CLI [here](#) TODO add link
@@ -947,7 +947,7 @@ node_modules
 Generate your first full set of Design Token by calling:
 
 ```bash
-$ yarn init-tokens
+yarn init-tokens
 ```
 
 Your output should look roughly like this:
@@ -1407,7 +1407,7 @@ You can build your Design Token set into different outputs using `Style Dictiona
 With all of that in place, for the first time compile your Design Token set into CSS Custom Properties now:
 
 ```bash
-$ yarn build-tokens
+yarn build-tokens
 ```
 
 If everything worked as expected, you should end up with a long `src/token/tokens.css` file and the following output on your terminal:
