--- a/packages/tools/docusaurus/docs/guides/create/start.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/start.mdx
@@ -37,7 +37,7 @@ Additionally you might not use `nvm` for `Node` version management. Just skip th
 Next we'll add a `.gitignore` file to the repository, that will be built up through the following sections to exclude generated code files:
 
 ```bash
-$ touch .gitignore
+touch .gitignore
 ```
 
 Add the `node_modules` folder to it for now:
@@ -193,7 +193,7 @@ node_modules
 If your project was not using `React` before, you should add a compatible version (**kickstartDS** currently uses `React 17`) of it now:
 
 ```bash
-$ yarn add react@17 react-dom@17
+yarn add react@17 react-dom@17
 ```
 
 ---
@@ -226,7 +226,7 @@ $ yarn add react@17 react-dom@17
 Next we'll add the `kickstartDS` dependencies themselves. We start out by adding our `base` module (`@kickstartds/base`), which contains all of the base components, to get started:
 
 ```bash
-$ yarn add @kickstartds/base@2.0.0-canary.922.4908.0
+yarn add @kickstartds/base@2.0.0-canary.922.4908.0
 ```
 
 Learn more about the different modules **kickstartDS** has to offer in our [overview here](#). TODO link to overview of modules here
