docs(foundations): add some headlines to bedrock page

--- a/packages/tools/docusaurus/docs/guides/create/storybook.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/storybook.mdx
@@ -130,7 +130,7 @@ Those are the dependencies added through using `npx storybook init`. They ensure
 
 Next to the dependencies, two `scripts` entries were added by the `Storybook` init:
 
-1. `storybook`: to start your `Storybook` in development / watch module
+1. `storybook`: to start your `Storybook` in development / watch mode
 2. `build-storybook`: to build a production ready, deployable version of your `Storybook`
 
 <CH.Code>
